# paddle-ocr-rs

./: .gitignore  AGENTS.md  Cargo.toml  READEME.md  README.md
assets/: default_models.yaml
docs/: READEME_zh-Hans.md  README_zh-Hans.md
scripts/: compare_bench.ps1  prepare_bench_dataset.ps1
src/: angle_net.rs  base_net.rs  config.rs  crnn_net.rs  db_net.rs  error.rs  lib.rs  main.rs  model_registry.rs  model_store.rs  ocr_error.rs  ocr_lite.rs  ocr_result.rs  ocr_utils.rs  scale_param.rs  scale_param_v2.rs  types.rs
src/cls/: classifier.rs  mod.rs  postprocess.rs  preprocess.rs
src/det/: detector.rs  mod.rs  postprocess_db.rs  preprocess.rs
src/det/postprocess/: mod.rs
src/input/: image_loader.rs
src/output/: json.rs  markdown.rs  mod.rs  visualize.rs
src/pipeline/: compat_rapidocr.rs  config.rs  image_ops.rs  mod.rs  rapid_ocr.rs  types.rs
src/pipeline/compat_rapidocr/: convert.rs  mod.rs  schema.rs
src/rec/: bidi.rs  decode.rs  mod.rs  preprocess.rs  recognizer.rs  word_boxes.rs
src/runtime/: provider.rs  session.rs
src/vision/: backend.rs  image_backend.rs  mod.rs  resize.rs  rotate_crop.rs
